--- a/dict/index.html
+++ b/dict/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/style/default.css">
-    <link rel="stylesheet" href="/style/dict.css">
+    <link rel="stylesheet" href="../style/default.css">
+    <link rel="stylesheet" href="../style/dict.css">
     <title>לישן דידן - מילון</title>
 </head>
 <body>
     <menu id="home-menu">
         <ul>
-            <li><a href="/">דף הבית</a></li>
-            <li><a href="/dict/">המילון</a></li>
-            <li><a href="/about/">על הפרויקט</a></li>
+            <li><a href="../">דף הבית</a></li>
+            <li><a href="../dict/">המילון</a></li>
+            <li><a href="../about/">על הפרויקט</a></li>
         </ul>
     </menu>
     <div id="menu-spacer"></div>
@@ -30,6 +30,6 @@
         </table>
     </div>
     
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
