--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/default.css">
-    <link rel="stylesheet" href="/style/home.css">
+    <link rel="stylesheet" href="./style/default.css">
+    <link rel="stylesheet" href="./style/home.css">
     <title>לישן דידן</title>
 </head>
 <body>
     <menu id="home-menu">
         <ul>
-            <li><a href="/">דף הבית</a></li>
-            <li><a href="/dict/">המילון</a></li>
-            <li><a href="/about/">על הפרויקט</a></li>
+            <li><a href="./">דף הבית</a></li>
+            <li><a href="./dict/">המילון</a></li>
+            <li><a href="./about/">על הפרויקט</a></li>
         </ul>
     </menu>
     <div id="menu-spacer"></div>
