Refactor CSS for responsive design and add grammar link to navigation + adding a lot of words

--- a/word/index.html
+++ b/word/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../style/default.css">
-    <link rel="stylesheet" href="../style/dict.css">
+    <link rel="stylesheet" href="../style/word.css">
     <title>לישן דידן - מילון</title>
 </head>
 <body>
@@ -20,8 +20,14 @@
     <div id="menu-spacer"></div>
     
     <div id="main-container">
-        <table>
+        <h1 id="title">המילה</h1>
+        <table id="conjugation">
             <tr>
+                <th>חלק דיבר</th>
+                <th>זמן</th>
+                <th>גוף</th>
+                <th>מין</th>
+                <th>מספר</th>
                 <th>לישן דידן</th>
                 <th>רומניזציה</th>
                 <th>עברית</th>
