--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="./">דף הבית</a></li>
             <li><a href="./dict/">המילון</a></li>
+            <li><a href="./grammar/">דקדוק</a></li>
             <li><a href="./about/">על הפרויקט</a></li>
         </ul>
     </menu>
